name:                NeverLandAPI
version:             0.0.0.1
synopsis:            AP Rest API
homepage:            http://www.github.com/samsmu/AP
maintainer:          mpkh@samsmu.edu
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    NeverLandAPI
  exposed-modules:
    Type.Plugin
    Type.PluginInfo
    Api.Plugin
    ApiTypes
    Api
    Example
  build-depends:
      base >= 4.6 && < 4.10
    , aeson >= 0.7 && < 0.12
    , base-compat >= 0.8 && < 0.10
    , bytestring >= 0.9 && < 0.11
    , containers >= 0.3 && < 0.6
    , generic-aeson == 0.2.*
    , hxt == 9.3.*
    , json-schema >= 0.6 && < 0.8
    , mtl >= 2.0 && < 2.3
    , generic-xmlpickler >= 0.1.0.1 && < 0.2
    , rest-core >= 0.39 && < 0.40
    , safe >= 0.2 && < 0.4
    , transformers >= 0.2 && < 0.6
    , transformers-compat >= 0.4 && < 0.6
    , stm >= 2.1 && < 2.5
    , text >= 0.11 && < 1.3
    , time >= 1.1 && < 1.7
    , unordered-containers == 0.2.*

flag wai
  description: Build the wai executable.
  default:     False
  manual:      True

flag gen
  description: Build client generation executable.
  default:     True
  manual:      True

executable NeverLandWai
  default-language:  Haskell2010
  ghc-options:       -Wall
  main-is:           Main.hs
  hs-source-dirs:    NeverLandWai
  if flag(wai)
    buildable: True
    build-depends:
        base >= 4.6 && < 4.10
      , base-compat >= 0.8 && < 0.10
      , NeverLandAPI
      , rest-wai >= 0.1 && < 0.3
      , warp >= 2.1 && < 3.3
  else
    buildable: False

executable NeverLandGen
  default-language:  Haskell2010
  ghc-options:       -Wall
  main-is:           Main.hs
  hs-source-dirs:    NeverLandGen
  if flag(gen)
    buildable: True
    build-depends:
        base >= 4.6 && < 4.10
      , base-compat >= 0.8 && < 0.10
      , NeverLandAPI
      , rest-gen >= 0.14 && < 0.20
  else
    buildable: False
